--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "typeorm": "typeorm-ts-node-commonjs",
-    "typeorm:migration": "typeorm migration:run -d ./src/data-source.js",
+    "typeorm": "npm run build && npx typeorm -d src/data-source.ts",
+    "migration:generate": "npm run typeorm -- migration:generate",
+    "typeorm:migration": "typeorm migration:run -d ./src/data-source.ts",
     "start:all": "npm run build && npm run typeorm:migration && npm run start:dev",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest --testMatch \"<rootDir>/*.spec.ts\" --config ./test/jest-e2e.json --noStackTrace --runInBand",
