--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "typeorm": "npm run build && npx typeorm -d src/data-source.ts",
+    "typeorm": "npm run build && npx typeorm -d dist/data-source.js",
     "migration:generate": "npm run typeorm -- migration:generate",
-    "typeorm:migration": "typeorm migration:run -d ./src/data-source.ts",
-    "start:all": "npm run build && npm run typeorm:migration && npm run start:dev",
+    "migration:run": "npm run typeorm -- migration:run",
+    "start:all": "npm run build && npm run migration:run && npm run start",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest --testMatch \"<rootDir>/*.spec.ts\" --config ./test/jest-e2e.json --noStackTrace --runInBand",
     "test:auth": "cross-env TEST_MODE=auth jest --config ./test/jest-e2e.json --noStackTrace --runInBand",
