--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,8 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
   },
-  "include": [
-    "./src/**/*",
-    "migrations/**/*.ts"
-]
+//   "include": [
+//     "./src/**/*",
+//     "migrations/**/*.ts"
+// ]
 }
