--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ TOKEN_EXPIRE_TIME=1h
 TOKEN_REFRESH_EXPIRE_TIME=24h
 
 POSTGRES_PORT=5432
-POSTGRES_PASSWORD=password
+POSTGRES_PASSWORD=linux
 POSTGRES_USER=postgres
-POSTGRES_DB=postgres
+POSTGRES_DB=library
 POSTGRES_HOST=localhost
