--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "typeorm": "npm run build && npx typeorm -d dist/data-source.js",
     "migration:generate": "npm run typeorm -- migration:generate",
     "migration:run": "npm run typeorm -- migration:run",
-    "start:all": "npm run build && npm run migration:run && npm run start",
+    "start:all": "npm run build && npm run migration:run && npm run start:dev",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest --testMatch \"<rootDir>/*.spec.ts\" --config ./test/jest-e2e.json --noStackTrace --runInBand",
     "test:auth": "cross-env TEST_MODE=auth jest --config ./test/jest-e2e.json --noStackTrace --runInBand",
