feat: .env variables to work with logger

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,8 @@ POSTGRES_PASSWORD=linux
 POSTGRES_USER=postgres
 POSTGRES_DB=library
 POSTGRES_HOST=localhost
+
+# environment variable to specify max file size
+MAX_LOGS_FILE_SIZE_KB=5
+# environment variable to specify logging level
+LOGGING_LEVEL=5
